--- a/shepherd-client/package.json
+++ b/shepherd-client/package.json
@@ -1,6 +1,38 @@
 {
-  "name": "shepherd-client",
-  "version": "1.0.0",
+  "name": "shepherd",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "deploy": "gh-pages -d build",
+    "export": "next export"
+  },
   "dependencies": {
-  }
+    "next": "^13.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^4.4.4"
+  },
+  "devDependencies": {
+    "@types/node": "18.15.11",
+    "@types/react": "^17.0.58",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.2",
+    "eslint": "7",
+    "eslint-config-next": "12.0.3",
+    "gh-pages": "^1.1.0",
+    "postcss": "^8.3.11",
+    "postcss-preset-env": "^7.0.0",
+    "tailwindcss": "^2.2.19",
+    "typescript": "^4.2.3"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
